@@ -2,7 +2,8 @@ use strict;
 use warnings;
 
 use Data::Random::HashType;
-use Test::More 'tests' => 16;
+use DateTime;
+use Test::More 'tests' => 20;
 use Test::NoWarnings;
 
 # Test.
@@ -13,6 +14,9 @@ my $obj = Data::Random::HashType->new(
 my ($ret) = $obj->random;
 is($ret->active, 1, 'Get active flag of hash type (1).');
 is($ret->name, 'sha256', 'Get name of hash type (sha256).');
+isa_ok($ret->valid_from, 'DateTime');
+my $is_valid = DateTime->compare($ret->valid_from, DateTime->now);
+is($is_valid, -1, 'Valid from date is in the past.');
 
 # Test.
 $obj = Data::Random::HashType->new(
@@ -25,6 +29,9 @@ isa_ok($ret, 'Data::HashType');
 is($ret->active, 1, 'Get active flag of hash type (1).');
 is($ret->id, 1, 'Get id of hash type (1).');
 is($ret->name, 'sha256', 'Get name of hash type (sha256).');
+isa_ok($ret->valid_from, 'DateTime');
+$is_valid = DateTime->compare($ret->valid_from, DateTime->now);
+is($is_valid, -1, 'Valid from date is in the past.');
 
 # Test.
 $obj = Data::Random::HashType->new(
